// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Accordion returns an accordion containing the item 1`] = `
<div
  className="accordion"
>
  <div
    className="accordion-item"
    key="0"
  >
    <h5>
      Foo
    </h5>
    <div
      className="accordion-content"
    >
      <p>
        My accordion content
      </p>
    </div>
  </div>
</div>
`;

exports[`Component: Accordion returns an accordion with several accordion items 1`] = `
<div
  className="accordion"
>
  <div
    className="accordion-item"
    key="0"
  >
    <h5>
      Foo
    </h5>
    <div
      className="accordion-content"
    >
      <p>
        My accordion content
      </p>
    </div>
  </div>
  <div
    className="accordion-item"
    key="1"
  >
    <h5>
      Bar
    </h5>
    <div
      className="accordion-content"
    >
      <p>
        My accordion content
      </p>
    </div>
  </div>
  <div
    className="accordion-item"
    key="2"
  >
    <h5>
      Baz
    </h5>
    <div
      className="accordion-content"
    >
      <p>
        My accordion content
      </p>
    </div>
  </div>
</div>
`;

exports[`Component: Accordion returns an empty accordion container if the items props is not provided 1`] = `
<div
  className="accordion"
/>
`;
